--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,5 +1,9 @@
 FROM openjdk:8
 
+WORKDIR .
+
+RUN java -jar -Dspring.profiles.active=profile_name target/spring-boot-rest-example-0.5.0.war
+
 COPY target/spring-boot-rest-example-0.5.0.war spring-boot-rest-example-0.5.0.war
 
 EXPOSE 8090 8091 3306
