--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,6 +1,6 @@
 FROM openjdk:8
 
-WORKDIR .
+WORKDIR /app
 
 RUN java -jar -Dspring.profiles.active=profile_name target/spring-boot-rest-example-0.5.0.war
 
