--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,6 +2,8 @@ FROM openjdk:8
 
 WORKDIR /app
 
+COPY . .
+
 RUN java -jar -Dspring.profiles.active=profile_name target/spring-boot-rest-example-0.5.0.war
 
 COPY target/spring-boot-rest-example-0.5.0.war spring-boot-rest-example-0.5.0.war
