--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -3,6 +3,7 @@ FROM openjdk:8
 WORKDIR /app
 
 COPY . .
+RUN ls
 WORKDIR /app/app
 RUN java -jar -Dspring.profiles.active=profile_name target/spring-boot-rest-example-0.5.0.war
 
