--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,10 +1,10 @@
 FROM openjdk:8
 
-WORKDIR /app
-
-COPY . .
+COPY /app/pom.xml /tmp/
+COPY src /tmp/src/
 RUN ls
-WORKDIR /app/app
+WORKDIR /tmp/
+
 RUN java -jar -Dspring.profiles.active=profile_name target/spring-boot-rest-example-0.5.0.war
 
 COPY target/spring-boot-rest-example-0.5.0.war spring-boot-rest-example-0.5.0.war
